--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JustChat</title>
+    <link rel="icon" href="data:," />
+    <title>Vite + React + TS</title>
   </head>
   <body>
     <div id="root"></div>
